crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@216.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_match('[[1, true], [2, false]]', 'strict $[*] ? (@[0] < $x) [1]', '{\"x\": 2}');"
---
SelectStmt@0..96
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..94
    FuncCall@7..94
      Ident@7..23 "jsonb_path_match"
      Ascii40@23..24 "("
      AConst@24..49
        Sconst@24..49 "'[[1, true], [2, fals ..."
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      AConst@51..82
        Sconst@51..82 "'strict $[*] ? (@[0]  ..."
      Ascii44@82..83 ","
      Whitespace@83..84 " "
      AConst@84..94
        Sconst@84..94 "'{\"x\": 2}'"
  Ascii41@94..95 ")"
  Ascii59@95..96 ";"

