crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@217.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_match('[{\"a\": 1}, {\"a\": 2}, 3]', 'lax exists($[*].a)', silent => false);"
---
SelectStmt@0..90
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..88
    FuncCall@7..88
      Ident@7..23 "jsonb_path_match"
      Ascii40@23..24 "("
      AConst@24..49
        Sconst@24..49 "'[{\"a\": 1}, {\"a\": 2}, ..."
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      AConst@51..71
        Sconst@51..71 "'lax exists($[*].a)'"
      Ascii44@71..72 ","
      Whitespace@72..73 " "
      NamedArgExpr@73..88
        Ident@73..79 "silent"
        Whitespace@79..80 " "
        EqualsGreater@80..82 "=>"
        Whitespace@82..83 " "
        AConst@83..88
          FalseP@83..88 "false"
  Ascii41@88..89 ")"
  Ascii59@89..90 ";"

