crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@218.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_match('[{\"a\": 1}, {\"a\": 2}, 3]', 'lax exists($[*].a)', silent => true);"
---
SelectStmt@0..89
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..87
    FuncCall@7..87
      Ident@7..23 "jsonb_path_match"
      Ascii40@23..24 "("
      AConst@24..49
        Sconst@24..49 "'[{\"a\": 1}, {\"a\": 2}, ..."
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      AConst@51..71
        Sconst@51..71 "'lax exists($[*].a)'"
      Ascii44@71..72 ","
      Whitespace@72..73 " "
      NamedArgExpr@73..87
        Ident@73..79 "silent"
        Whitespace@79..80 " "
        EqualsGreater@80..82 "=>"
        Whitespace@82..83 " "
        AConst@83..87
          TrueP@83..87 "true"
  Ascii41@87..88 ")"
  Ascii59@88..89 ";"

