crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@22.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1]', 'strict $[1]', silent => true);"
---
SelectStmt@0..62
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..60
    FuncCall@7..60
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..29
        Sconst@24..29 "'[1]'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..44
        Sconst@31..44 "'strict $[1]'"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      NamedArgExpr@46..60
        Ident@46..52 "silent"
        Whitespace@52..53 " "
        EqualsGreater@53..55 "=>"
        Whitespace@55..56 " "
        AConst@56..60
          TrueP@56..60 "true"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

