crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@221.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[null,1,true,\"a\",[],{}]', '$.type()');"
---
SelectStmt@0..63
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..61
    FuncCall@7..61
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..49
        Sconst@24..49 "'[null,1,true,\"a\",[], ..."
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      AConst@51..61
        Sconst@51..61 "'$.type()'"
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

