crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@225.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('null', 'true.type()');"
---
SelectStmt@0..47
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..30
        Sconst@24..30 "'null'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..45
        Sconst@32..45 "'true.type()'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

